frame/support/test/tests/construct_runtime_ui/exclude_missspell.stderr
error: Unexpected tokens, expected one of `::$ident` `::{`, `expanded`, `exclude_parts`, `use_parts`, `=`, `,`
 --> $DIR/exclude_missspell.rs:9:24
  |
9 |         System: frame_system exclude_part { Call },
  |                              ^^^^^^^^^^^^
