frame/support/test/tests/construct_runtime_ui/exclude_missspell.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub enum Runtime where
		RuntimeExtrinsic = RuntimeExtrinsic,
		Block = Block,
		NodeBlock = Block,
	{
		System: frame_system exclude_part { Call },
	}
}

fn main() {}
